version 1.9.5:
	* New --ignoreTrivial switch that tells Cobertura to ignore the 
	  following in the coverage report: Getter methods that simply 
	  read a class field; Setter methods that set a class field;
	  Constructors that only set class fields and call a super 
	  class constructor 
	  (Patch 3010530 (partial) from 2035169 (partial)) (Scott Frederick/Ted Smith)
	

version 1.9.4.1:
	* Fix a problem that occurs in Tomcat.   When TouchCollector 
	  initializes, it calls ProjectData.initialize() which (with 
	  Tomcat only) eventually calls TouchCollector.   However, 
	  TouchCollector's static members have not been initialized.   
	  Added a test that highlights this problem.   (Thanks to Jack Cobb
	  for suggesting the fix).
	* Runs on Java 5.  (Fix for Bug 2962599).
	

version 1.9.4:
	* Cobertura is now up to 10x faster. Aggregates changes in
	  temporary TouchCollector class (thread-safe, but lock-free) and after that
	  applies it on real model (ProjectData) as a batch operation. (Piotr Tabor)
	* Fixed "Some packages are included more then once" bug (#2875576) that
	  caused some counts on the HTML report to be incorrect.  (Charlie Squires)
	* Fixed "Inner classes not counted in coverage report total" bug (#2943320)
	  (Charlie Squires)

version 1.9.3:
	* Update to the latest Javancss (32.53) to fix some complexity calculation
	  problems.  Bug #2824425. (John Lewis)
	* Non-Java source files (like Groovy) no longer show the JavaNCSS warnings
	  during cobertura-report.  Fix of bug #2819844.
	* Support the case where multiple classloaders each load the Cobertura 
	  classes.  (Ed Randall)
	* Fixed bug added with 1.9.2 where a NullPointerException is thrown
	  if ProjectData.saveGlobalProjectData() is called before any instrumented
	  code is executed.

version 1.9.2:
	* Cobertura is now thread safe.
	* Fix for FileLocker exception when writing coverage data 
	  (java.lang.IllegalStateException: Shutdown in progress) that started